# swarm_study

./: .gitignore  pyproject.toml
examples/langgraph_airline2/: main.py  structure.md
examples/langgraph_airline2/agents/: agents.py
examples/langgraph_airline2/configs/: config.py  prompts.py
examples/langgraph_airline2/tools/: tools.py
