[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "swarm"
version = "0.1.0"
description = ""
authors = ["justin <justin@buzzni.com>"]

[tool.poetry.dependencies]
python = "^3.10"  # Specify your Python version requirement
langchain = "^0.3.4"
langgraph = "^0.2.39"
langchain-openai = "^0.2.4"
python-dotenv = "^1.0.1"
openai = "^1.52.2"
langchain-community = "^0.3.3"
